--- a/vlog-daily.service
+++ b/vlog-daily.service
@@ -1,8 +1,8 @@
 [Unit]
-Description=VRChat Vlog Daily Processing
+Description=VLog Daily Processing
 
 [Service]
 Type=oneshot
-WorkingDirectory=/home/kafka/projects/vlog
-ExecStart=/snap/bin/task process:daily
-Environment="PATH=/snap/bin:/home/kafka/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+WorkingDirectory=/home/kafka/vlog
+ExecStart=/usr/bin/task process:daily
+Environment="PATH=/usr/local/bin:/usr/bin:/bin"
