feat(infra): Harden systemd services for zero-ops reliability

--- a/systemd/vlog-daily.service
+++ b/systemd/vlog-daily.service
@@ -6,3 +6,5 @@ Type=oneshot
 WorkingDirectory=/home/kafka/vlog
 ExecStart=/usr/bin/task process:daily
 Environment="PATH=/usr/local/bin:/usr/bin:/bin"
+Restart=on-failure
+RestartSec=5
