--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,12 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "pillow>=12.0.0",
     "matplotlib>=3.10.8",
-    "pyannote.audio>=3.1.1",
     "rich>=14.3.2",
+]
+
+[project.optional-dependencies]
+diarization = [
+    "pyannote.audio>=3.1.1",
 ]
 
 [tool.ruff]
