--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ log = "0.4"
 env_logger = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.6", features = ["serde", "v4", "v7"] }
+thiserror = "1.0"
+tracing = "0.1"
+tracing-appender = "0.2"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid"] }
 postgrest = "1.6" # Supabase client
 # whisper-rs = "0.11" # Whisper.cpp bindings (requires libclang)
 cpal = "0.15" # Audio recording
@@ -27,3 +32,11 @@ base64 = "0.21"
 async-trait = "0.1.89"
 tempfile = "3.10"
 notify = "6.1.1"
+parking_lot = "0.12"
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
