--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "vlog-rs"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = ["src/windows/agent"]
+
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
@@ -34,9 +37,17 @@ tempfile = "3.10"
 notify = "6.1.1"
 parking_lot = "0.12"
 
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.52", features = [
+    "Win32_Foundation",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Threading",
+    "Win32_System_Diagnostics_Debug",
+] }
+
 [profile.release]
 opt-level = "z"
 lto = true
 codegen-units = 1
 panic = "abort"
-strip = true
+# strip = true
