--- a/src/windows/agent/Cargo.toml
+++ b/src/windows/agent/Cargo.toml
@@ -3,23 +3,22 @@ name = "vlog-windows-agent"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+[target.'cfg(windows)'.dependencies]
 windows = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
     "Win32_System_Diagnostics_Debug",
 ] }
+
+[dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+anyhow = "1.0"
+notify = "6.1.1"
+regex = "1.10"
 
-[profile.release]
-opt-level = "z"
-lto = true
-codegen-units = 1
-panic = "abort"
-strip = true
