--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,1 +1,11 @@
-[]
+[
+  {
+    "id": "019c740d-82c4-7142-a9ee-413e5b22f106",
+    "created_at": "2026-02-19T03:59:28.452463300Z",
+    "status": "processing",
+    "task_type": "process_session",
+    "file_paths": [
+      "data/recordings\\20260219_125828.wav"
+    ]
+  }
+]
